fixing spacing issues

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -147,6 +147,12 @@ pre {
     margin-left: auto;
     @extend %clearfix;
 
+    @include media-query($standard) {
+    padding-right: $spacing-unit / 2;
+    padding-left: $spacing-unit / 2;
+
+}
+
     @include media-query($on-laptop) {
         max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
         max-width:         calc(#{$content-width} - (#{$spacing-unit}));
